--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,21 +41,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Sex" />
+                android:text="Sex"
+                android:textSize="18dp"/>
 
             <RadioButton
                 android:id="@+id/male"
                 android:layout_width="88dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="male" />
+                android:text="male"
+                android:textSize="16dp"/>
 
             <RadioButton
                 android:id="@+id/female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="female" />
+                android:text="female"
+                android:textSize="16dp"/>
         </RadioGroup>
 
     </LinearLayout>
@@ -73,7 +76,8 @@
             android:id="@+id/textView6"
             android:layout_width="103dp"
             android:layout_height="match_parent"
-            android:text="Patient Name" />
+            android:text="Patient Name"
+            android:textSize="18dp"/>
 
         <EditText
             android:id="@+id/name"
@@ -97,7 +101,8 @@
             android:id="@+id/textView7"
             android:layout_width="106dp"
             android:layout_height="match_parent"
-            android:text="Patient ID" />
+            android:text="Patient ID"
+            android:textSize="18dp" />
 
         <EditText
             android:id="@+id/id"
@@ -121,7 +126,8 @@
             android:id="@+id/textView8"
             android:layout_width="106dp"
             android:layout_height="match_parent"
-            android:text="Age" />
+            android:text="Age"
+            android:textSize="18dp"/>
 
         <EditText
             android:id="@+id/age"
